cluster/apps/traefik/traefik/ingress/headlamp-system/ingress-routes.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-lan-https
  namespace: headlamp-system
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
    external-dns.kubernetes.io/hostname: headlamp.lan.${EXTERNAL_DOMAIN}
    external-dns.kubernetes.io/target: ${TRAEFIK_IP4}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`headlamp.lan.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: lan-ip-whitelist
        - name: https-proto-header
        - name: compress
      services:
        - name: headlamp
          namespace: headlamp-system
          passHostHeader: true
          port: 80
  tls:
    secretName: "headlamp-lan-${EXTERNAL_DOMAIN/./-}-tls"
